Style: Fix break in modal popup

--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@ label {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  margin-top: 100px;
+  margin-top: 35px;
 }
 
 .livewidth {
